samples/_failures_safe/1761256261_bbe6c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b6311bd.c: In function ‘main’:
./samples/SAFE/__tmp_1b6311bd.c:183:20: error: missing terminating " character
  183 |             printf("
      |                    ^
./samples/SAFE/__tmp_1b6311bd.c:183:13: error: expected expression at end of input
  183 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_1b6311bd.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1b6311bd.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1b6311bd.c:183:13: error: expected declaration or statement at end of input
